<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/first_fragment"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/tab_alarm" />
    <item
        android:id="@+id/second_fragment"
        android:icon="@drawable/ic_change"
        android:title="@string/tab_goals" />
    <item
        android:id="@+id/third_fragment"
        android:icon="@drawable/ic_fractions"
        android:title="@string/tab_bedtime" />
    <item
        android:id="@+id/fourth_fragment"
        android:icon="@drawable/ic_protrade"
        android:title="@string/tab_stopwatch" />
    <item
        android:id="@+id/fifth_fragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/tab_timer" />
</menu>