<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/rectangle_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txvGallery"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:fontFamily="@font/cabin_bold"
            android:gravity="center"
            android:text="@string/gallery"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/light_gray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txvCamera"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:fontFamily="@font/cabin_bold"
            android:gravity="center"
            android:text="@string/camera"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txvCancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/rectangle_bg"
        android:fontFamily="@font/cabin_bold"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_14sdp" />


</LinearLayout>


